name:                pure-lazyloader
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-lazyloader
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.9 && < 5,
    pure >= 0.7 && < 1,
    pure-visibility >= 0.7 && < 1,
    pure-loader >= 0.7 && < 1

  hs-source-dirs: src

  exposed-modules:
    Pure.Lazyloader

  default-language: Haskell2010