name:                pure-lazyloader
version:             0.8.0.0
homepage:            purehs.org/doc/pure-lazyloader
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-lazyloader.git

library
  build-depends:
    base,
    pure,
    pure-intersection,
    pure-loader

  hs-source-dirs: src

  exposed-modules:
    Pure.Lazyloader

  default-language: Haskell2010
